# iot-course

./: .gitignore  CMakeLists.txt  README.md  node.cpp
electrometer/: README.md  a.out  arm64  modbus  modbus.c  read-data  read-data.c  relay0  send_receive.c  send_receive_arm64
temp/: async_publish.cpp  py_async_consume.py
tests/: performance_test.py
web_temp/: README.md  api.py  requirements.txt
web_temp/static/css/: index.css
web_temp/static/js/: index.js
web_temp/templates/: index.html
website/: api.py  mqtt-sub.py  requirements.txt  run.py
website/static/css/: index.css
website/static/js/: index.js  request.js
website/templates/: index.html
